eks-setup/env/prod/vpc.tf

locals {
  name_prefix = "${var.app_name}-${var.env}"
}

resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr_block

  tags = {
    Name = "${name_prefix}_vpc"
  }
}
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${name_prefix}_igw"
  }
}
